<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.learning.course.letslearn.MainMenu"
    android:orientation="vertical"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    >
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="26sp"
            android:gravity="bottom"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/app_name_post"
            android:gravity="bottom"
            android:layout_marginLeft="5dp"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:src="@drawable/letslearn"/>

    <Button
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mm_btnLearnAlphabets"
        android:id="@+id/btnLearnAlphabets"
        android:onClick="buttonClicked"
        />

    <Button
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mm_btnLearnNumbers"
        android:id="@+id/btnLearnNumbers"
        android:onClick="buttonClicked" />

    <Button
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mm_btnExit"
        android:id="@+id/btnExit"
        android:onClick="buttonClicked"></Button>

    <!-- to have some extra space at the end to cover scroll bar in portrait view -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        />


</LinearLayout>
</ScrollView>